# odoo-hackathon-globetrotter

./: README.md
backend/: .env  .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: itineraries.py  routes.py  trips.py
backend/app/core/: config.py  database.py  users.py
backend/app/models/: itinerary.py  trip.py  user.py
backend/app/schemas/: itinerary.py  trip.py  user.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: axios.ts
frontend/src/components/: Navbar.tsx
frontend/src/pages/: CreateTrip.tsx  Dashboard.tsx  Home.tsx  Login.tsx  Register.tsx  TripItinerary.tsx  UserProfile.tsx
frontend/src/utils/: api.ts
